--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -182,7 +182,7 @@
     align-items: center;
     justify-content: space-between;
     opacity: 0;
-    transform: translateX(0);
+    transform: translateX(100%);
     transition: all 0.8s ease-in-out;
     width: 100%;
     max-width: 1200px;
@@ -224,3 +224,26 @@
     font-weight: bold;
     color: #223a59;
 } 
+
+@media (max-width: 768px) {
+    .facility {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        transform: translateX(0);
+        opacity: 1; 
+        text-align: center;
+    }
+
+    .facility-image {
+        width: 90%; 
+        max-width: 300px;
+        margin-bottom: 15px;
+    }
+
+    .facility-description {
+        width: 100%; 
+        padding: 10px;
+        font-size: 1rem;
+    }
+}
