--- a/src/styles/ContactUs.css
+++ b/src/styles/ContactUs.css
@@ -1,34 +1,36 @@
 .contact-us-container {
     display: flex;
     flex-direction: column;
-    align-items: center; /* Center horizontally */
-    justify-content: center; /* Center vertically */
-    min-height: 100vh; /* Ensure it takes the full viewport height */
-    background-color: #f7f7f7; /* Optional: Background color for the page */
-    padding: 20px; /* Add padding for spacing */
-    text-align: center; /* Center-align text */
-    box-sizing: border-box; /* Include padding in the height/width calculations */
+    align-items: center; 
+    justify-content: center;
+    min-height: 100vh; 
+    background-color: #223a59; 
+    padding: 20px;
+    text-align: center; 
+    box-sizing: border-box; 
 }
 
 .contact {
     display: flex;
     flex-direction: column;
-    align-items: center; /* Center horizontally */
-    gap: 20px; /* Add space between sections */
+    align-items: center; 
+    gap: 20px; 
     width: 100%;
-    max-width: 800px; /* Limit the content width */
+    max-width: 800px;
 }
 
 .contact h2 {
-    font-size: 1.8rem;
+    font-size: clamp(0.8rem, 1.5vw, 1.7rem);
     font-weight: bold;
-    color: #223a59; /* Dark color for contrast */
+    color: #faf6f6;
     margin-bottom: 10px;
+    font-family: "Libre Baskerville";
 }
 
 .contact p {
-    font-size: 1.2rem;
+    font-size: clamp(0.8rem, 1vw, 1.5rem);
     line-height: 1.6;
-    color: #333; /* Subtle text color */
+    color: #faf6f6; 
     margin-bottom: 20px;
+    font-family: "Montserrat";
 }
