--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -82,6 +82,7 @@
     justify-content: center;
     align-items: center;
     scroll-snap-align: start;
+    background-color: none;
 }
 
 .background-image {
@@ -101,27 +102,12 @@
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
 }
 
-.notice-board-section {
-    padding: 20px;
-    background-color: #223a59;
-    scroll-snap-align: start;
-    min-height: 100vh;
-    text-align: center;
-    scroll-snap-align: start;
-}
-
-.notices {
-    margin-top: 20px;
-    font-size: 1.2rem;
-    line-height: 1.6;
-}
-
 .sticky-header {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 60px;
+    height: 70px;
     background-color: rgba(255, 255, 255, 0.09);
     display: flex;
     align-items: center;
@@ -134,11 +120,13 @@
     height: 40px;
     width: 40px;
     margin-right: 10px;
+    margin-top: -10px;
 }
 
 .school-name-container {
     position: relative;
     text-decoration: none;
+    top: -10px;
 }
 
 .school-name {
@@ -160,7 +148,8 @@
 
 .facilities-section {
     padding: 50px 20px;
-    background-color: #f7f7f7;
+    background-color: #223a59;
+    color: #faf6f6;
 }
 
 .facilities-section h2 {
@@ -215,14 +204,12 @@
     width: 50%;
     padding: 20px;
     font-size: 1.2rem;
-    color: #333;
 }
 
 .facility-description h3 {
     margin-bottom: 10px;
     font-size: 1.8rem;
     font-weight: bold;
-    color: #223a59;
 } 
 
 @media (max-width: 768px) {
