fix the layout for the gallery

--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -4,6 +4,10 @@
     box-sizing: border-box; 
 }
 
+.school-name Link {
+    text-decoration: none;
+}
+
 .about-us {
     background-color: #223a59;
 }
