--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -3,13 +3,12 @@
     padding: 0;
     margin: 0;
 }
-  
+/*   
 body {
     background-color: #223a59;
 }
-  
+   */
 .gallery {
-    background-color: #223a59;
     min-height: 100vh; 
 }
   
@@ -19,6 +18,7 @@ header {
     padding: 10px 0;
     color: #faf6f6;
     padding-top: 100px;
+    font-size: clamp(1rem, 2vw, 3rem);
 }
   
 .gallery-container {
