--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .homepage {
     background-size: cover;
     background-position: center;
@@ -8,12 +12,13 @@
     position: fixed;
     top: 10px;
     right: 20px;
-    font-size: 2rem;
+    font-size: 1.5rem;
     background: none;
     border: none;
     color: #faf6f6;
     cursor: pointer;
     z-index: 150;
+    font-family: "Libre Baskerville";
 }
 
 .menu-overlay {
@@ -75,6 +80,10 @@
     cursor: pointer;
 }
 
+.close-btn:hover {
+    color: #3684db;
+}
+
 .landing-section {
     position: relative;
     height: 100vh;
@@ -82,10 +91,10 @@
     justify-content: center;
     align-items: center;
     scroll-snap-align: start;
-    background-color: none;
+    font-family: "Libre Baskerville";
 }
 
-.background-image {
+.background-video {
     position: absolute;
     top: 0;
     left: 0;
@@ -94,9 +103,10 @@
     object-fit: cover; 
     z-index: -1; 
 }
+
 .pkmaups {
     color: #faf6f6;
-    font-size: clamp(1rem, 3vw, 4rem);
+    font-size: clamp(1rem, 4vw, 4rem);
     font-family: "Libre Baskerville";
     text-align: center;
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
@@ -108,7 +118,7 @@
     left: 0;
     width: 100%;
     height: 70px;
-    background-color: rgba(255, 255, 255, 0.09);
+    background-color: rgba(1, 17, 37);
     display: flex;
     align-items: center;
     padding: 0 20px;
@@ -126,6 +136,11 @@
 .school-name-container {
     position: relative;
     top: -10px;
+}
+
+.school-name-container a {
+    text-decoration: none; 
+    color: inherit; 
 }
 
 .school-name {
@@ -147,11 +162,11 @@
 
 .facilities-section {
     padding: 50px 20px;
-    background-color: #223a59;
     color: #faf6f6;
 }
 
 .facilities-section h2 {
+    font-family: "Libre Baskerville";
     text-align: center;
     font-size: 2rem;
 }
@@ -210,6 +225,35 @@
     font-size: 1.8rem;
     font-weight: bold;
 } 
+
+.back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    border: none;
+    border-radius: 50%;
+    background-color: #223a59; 
+    color: #faf6f6;
+    font-size: 1.5rem;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    z-index: 300;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.back-to-top:hover {
+    background-color: #3684db; 
+}
+
+.back-to-top.show {
+    opacity: 1;
+}
 
 @media (max-width: 768px) {
     .facility {
